--- a/Lesson 5/code/index.html
+++ b/Lesson 5/code/index.html
@@ -1,9 +1,27 @@
 <html>
 	<head>
 		<title>My first SPA question</title>
+        <script type="text/javascript" src="js/ee.js"></script>
+        <script type="text/javascript" src="js/utils.js"></script>
+        <script type="text/javascript" src="js/store.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/view/inputview.js"></script>
+        <script type="text/javascript" src="js/view/listview.js"></script>
+        <script type="text/javascript" src="js/view/footerview.js"></script>
+        <script type="text/javascript" src="js/controller/inputctrl.js"></script>
+        <script type="text/javascript" src="js/controller/listctrl.js"></script>
+        <script type="text/javascript" src="js/controller/footerctrl.js"></script>
+        <link rel="stylesheet" href="css/todo.css">
 	</head>
-
 	<body>
-
+        <div id="inputview">
+            <input id="todo_input" type="text">
+            <input id="todo_addbutton" type="button" value="Dodaj">
+        </div>
+        <div id="listview">
+            <ul id="todo_list">
+            </ul>
+        </div>
+        <div id="footerview">All: <span id="todo_all">0</span>/Act: <span id="todo_active">0</span></div>
 	</body>
 </html>
