--- a/Lesson 6/code/index.html
+++ b/Lesson 6/code/index.html
@@ -1,22 +1,28 @@
 <html>
-
-<head></head>
-
-<body>
-
-	<script type="text/javascript">
-		var httpRequest = new XMLHttpRequest();
-		httpRequest.onreadystatechange = function () {
-			if (httpRequest.readyState !== 4 ) {
-				return;
-			}
-			if (httpRequest.status !== 200) {
-				throw new Error('Request failed');
-			}
-			console.log(httpRequest.responseText);
-		};
-	httpRequest.open('POST', '/api/todos');
-	httpRequest.send(JSON.stringify([{id: 0, value: 'test'}, {id: 1, value: 'test222'}]));
-	</script>
-</body>
+	<head>
+		<title>My first SPA question</title>
+        <script type="text/javascript" src="js/ee.js"></script>
+        <script type="text/javascript" src="js/utils.js"></script>
+        <script type="text/javascript" src="js/store.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/view/inputview.js"></script>
+        <script type="text/javascript" src="js/view/listview.js"></script>
+        <script type="text/javascript" src="js/view/footerview.js"></script>
+        <script type="text/javascript" src="js/controller/inputctrl.js"></script>
+        <script type="text/javascript" src="js/controller/listctrl.js"></script>
+        <script type="text/javascript" src="js/controller/footerctrl.js"></script>
+        <link rel="stylesheet" href="css/todo.css">
+	</head>
+	<body>
+        <div id="inputview">
+            <input id="todo_input" type="text">
+            <input id="todo_addbutton" type="button" value="Dodaj">
+            <input id="todo_savebutton" type="button" value="Zapisz">
+        </div>
+        <div id="listview">
+            <ul id="todo_list">
+            </ul>
+        </div>
+        <div id="footerview">All: <span id="todo_all">0</span>/Act: <span id="todo_active">0</span></div>
+	</body>
 </html>
